src/test/ui/recursion/recursive-reexports.stderr
error[E0412]: cannot find type `S` in module `recursive_reexports`
  --> $DIR/recursive-reexports.rs:5:32
   |
LL | fn f() -> recursive_reexports::S {}
   |                                ^ not found in `recursive_reexports`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
